[gd_scene load_steps=28 format=3 uid="uid://btcsf6h4uq1qg"]

[ext_resource type="FontFile" uid="uid://c8dolumhrfhc2" path="res://Sprites/W95FA.ttf" id="1_fcavk"]
[ext_resource type="Script" path="res://ending.gd" id="1_ru8wg"]
[ext_resource type="Texture2D" uid="uid://d0ayog1s21xy2" path="res://Sprites/goodendingbg.png" id="2_1dedk"]
[ext_resource type="AudioStream" uid="uid://cgdrcaqr4ulnf" path="res://Sound/button-202966.mp3" id="4_rriie"]
[ext_resource type="AudioStream" uid="uid://ddqyyhj4r2bsg" path="res://Sound/menu-buttom-3-bibs-190018.mp3" id="5_o4fvw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7d2my"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ml4l0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_br7iv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nlbsf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tlsjp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_basse"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7iyb5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bs85s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ls4sp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lwd5h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uokb6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mcrnk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bifg4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fw0w6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q3ari"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hoa5d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2cmif"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bop8t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jf85a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h14g0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7gjej"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_joq4w"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ru8wg")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 3
layout_mode = 0
offset_top = 1.0
offset_right = 1657.0
offset_bottom = 926.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_1dedk")

[node name="Victory" type="Label" parent="."]
texture_filter = 3
layout_mode = 0
offset_left = 457.0
offset_top = 12.0
offset_right = 760.0
offset_bottom = 157.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_fcavk")
theme_override_font_sizes/font_size = 75
text = "You won!"

[node name="smaller" type="Label" parent="."]
texture_filter = 3
layout_mode = 0
offset_left = 422.0
offset_top = 73.0
offset_right = 785.0
offset_bottom = 103.0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_fcavk")
theme_override_font_sizes/font_size = 30
text = "(wait that was just a single day)"

[node name="Menu" type="Button" parent="."]
texture_filter = 3
layout_mode = 0
offset_left = 499.0
offset_top = 502.0
offset_right = 668.0
offset_bottom = 547.0
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.733333)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.886275)
theme_override_colors/font_focus_color = Color(1, 1, 1, 0.745098)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("1_fcavk")
theme_override_font_sizes/font_size = 44
theme_override_styles/focus = SubResource("StyleBoxEmpty_7d2my")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ml4l0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_br7iv")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_nlbsf")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_tlsjp")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_basse")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7iyb5")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_bs85s")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ls4sp")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_lwd5h")
theme_override_styles/normal = SubResource("StyleBoxEmpty_uokb6")
text = "Main Menu"

[node name="Leave" type="Button" parent="."]
texture_filter = 3
layout_mode = 0
offset_left = 495.0
offset_top = 560.0
offset_right = 693.0
offset_bottom = 605.0
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.733333)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.886275)
theme_override_colors/font_focus_color = Color(1, 1, 1, 0.745098)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("1_fcavk")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcrnk")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_bifg4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_fw0w6")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_q3ari")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_hoa5d")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_2cmif")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bop8t")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_jf85a")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h14g0")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_7gjej")
theme_override_styles/normal = SubResource("StyleBoxEmpty_joq4w")
text = "Leave Game"

[node name="Hover" type="AudioStreamPlayer2D" parent="."]
position = Vector2(499, 502)
stream = ExtResource("4_rriie")

[node name="Pressed" type="AudioStreamPlayer2D" parent="."]
position = Vector2(499, 502)
stream = ExtResource("5_o4fvw")

[connection signal="mouse_entered" from="Menu" to="." method="_on_main_mouse_entered"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="mouse_entered" from="Leave" to="." method="_on_main_mouse_entered"]
[connection signal="pressed" from="Leave" to="." method="on_quit_pressed"]
